2010-01-04  Daniel Bates  <dbates@webkit.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=33039

        [bzt] Second attempt to fix an issue where bugzilla-tool dies
        when the keychain lookup fails to find an entry for bugs.webkit.org.

        * Scripts/webkitpy/credentials.py:
        * Scripts/webkitpy/credentials_unittest.py:

2010-01-04  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Make Rollout an AbstractSequencedCommmand
        https://bugs.webkit.org/show_bug.cgi?id=33133

        As suggested by Adam in:
        https://bugs.webkit.org/show_bug.cgi?id=33131#c2

        * Scripts/webkitpy/commands/download.py:

2010-01-04  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Make all commands AbstractDeclarativeCommmands instead of direct Command subclasses
        https://bugs.webkit.org/show_bug.cgi?id=33131

        Evenetually we'll probably roll AbstractDeclarativeCommmand directly into Command
        but for now we just deploy it everywhere and don't try to fix up the few valid uses
        of Command.

        * Scripts/webkitpy/commands/download.py:
        * Scripts/webkitpy/commands/queries.py:
        * Scripts/webkitpy/commands/upload.py:
        * Scripts/webkitpy/multicommandtool.py:

2010-01-03  Adam Barth  <abarth@webkit.org>

        Unreviewed "build" fix.  Need to import ScriptError.

        * Scripts/webkitpy/buildsteps.py:

2010-01-03  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Make it easier to run submit-patch when previous run cancelled
        https://bugs.webkit.org/show_bug.cgi?id=33070

        This patch renames create-review to submit-patch (as requested by
        Maciej).

        This patch makes it easier to run submit-patch after the user has
        already cancelled a previous run of submit-patch by detecting when we